# pkg/apiserver/api/v1/offering.pb.go
@@ -347,6 +347,69 @@ func (m *OfferingListRequest) GetContinue() string {
 	return ""
 }
 
+type OfferingWatchRequest struct {
+	Account              string   `protobuf:"bytes,1,opt,name=account,proto3" json:"account,omitempty"`
+	LabelSelector        string   `protobuf:"bytes,2,opt,name=labelSelector,proto3" json:"labelSelector,omitempty"`
+	ResourceVersion      string   `protobuf:"bytes,3,opt,name=resourceVersion,proto3" json:"resourceVersion,omitempty"`
+	OperationType        string   `protobuf:"bytes,4,opt,name=operationType,proto3" json:"operationType,omitempty"`
+	XXX_NoUnkeyedLiteral struct{} `json:"-"`
+	XXX_unrecognized     []byte   `json:"-"`
+	XXX_sizecache        int32    `json:"-"`
+}
+
+func (m *OfferingWatchRequest) Reset()         { *m = OfferingWatchRequest{} }
+func (m *OfferingWatchRequest) String() string { return proto.CompactTextString(m) }
+func (*OfferingWatchRequest) ProtoMessage()    {}
+func (*OfferingWatchRequest) Descriptor() ([]byte, []int) {
+	return fileDescriptor_d876d3a4bab4c43a, []int{6}
+}
+
+func (m *OfferingWatchRequest) XXX_Unmarshal(b []byte) error {
+	return xxx_messageInfo_OfferingWatchRequest.Unmarshal(m, b)
+}
+func (m *OfferingWatchRequest) XXX_Marshal(b []byte, deterministic bool) ([]byte, error) {
+	return xxx_messageInfo_OfferingWatchRequest.Marshal(b, m, deterministic)
+}
+func (m *OfferingWatchRequest) XXX_Merge(src proto.Message) {
+	xxx_messageInfo_OfferingWatchRequest.Merge(m, src)
+}
+func (m *OfferingWatchRequest) XXX_Size() int {
+	return xxx_messageInfo_OfferingWatchRequest.Size(m)
+}
+func (m *OfferingWatchRequest) XXX_DiscardUnknown() {
+	xxx_messageInfo_OfferingWatchRequest.DiscardUnknown(m)
+}
+
+var xxx_messageInfo_OfferingWatchRequest proto.InternalMessageInfo
+
+func (m *OfferingWatchRequest) GetAccount() string {
+	if m != nil {
+		return m.Account
+	}
+	return ""
+}
+
+func (m *OfferingWatchRequest) GetLabelSelector() string {
+	if m != nil {
+		return m.LabelSelector
+	}
+	return ""
+}
+
+func (m *OfferingWatchRequest) GetResourceVersion() string {
+	if m != nil {
+		return m.ResourceVersion
+	}
+	return ""
+}
+
+func (m *OfferingWatchRequest) GetOperationType() string {
+	if m != nil {
+		return m.OperationType
+	}
+	return ""
+}
+
 func init() {
 	proto.RegisterType((*Offering)(nil), "kubecarrier.api.v1.Offering")
 	proto.RegisterType((*OfferingSpec)(nil), "kubecarrier.api.v1.OfferingSpec")
@@ -354,6 +417,7 @@ func init() {
 	proto.RegisterType((*OfferingList)(nil), "kubecarrier.api.v1.OfferingList")
 	proto.RegisterType((*OfferingGetRequest)(nil), "kubecarrier.api.v1.OfferingGetRequest")
 	proto.RegisterType((*OfferingListRequest)(nil), "kubecarrier.api.v1.OfferingListRequest")
+	proto.RegisterType((*OfferingWatchRequest)(nil), "kubecarrier.api.v1.OfferingWatchRequest")
 }
 
 func init() {
@@ -361,39 +425,44 @@ func init() {
 }
 
 var fileDescriptor_d876d3a4bab4c43a = []byte{
-	// 503 bytes of a gzipped FileDescriptorProto
-	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x00, 0x00, 0x00, 0x02, 0xff, 0x84, 0x54, 0xcd, 0x6e, 0xd3, 0x40,
-	0x10, 0x56, 0x7e, 0x0a, 0x61, 0xc2, 0x9f, 0x06, 0x0e, 0x56, 0x54, 0x21, 0x6b, 0xa9, 0x68, 0xb9,
-	0xc4, 0x4a, 0xe8, 0x01, 0x71, 0x01, 0x15, 0xa4, 0x0a, 0x89, 0x52, 0x69, 0x2b, 0x71, 0xe0, 0xb6,
-	0xd9, 0x4c, 0xa2, 0x05, 0x67, 0xd7, 0xac, 0x37, 0x96, 0xaa, 0xa4, 0x17, 0x2e, 0x5c, 0xb8, 0xf1,
-	0x50, 0x3c, 0x00, 0xaf, 0xc0, 0x83, 0x54, 0xde, 0xd8, 0x89, 0xdb, 0xa4, 0xe9, 0x6d, 0x66, 0xfc,
-	0x7d, 0x33, 0xdf, 0x7c, 0x63, 0x1b, 0x1e, 0x9a, 0xd1, 0x88, 0xac, 0xd2, 0xe3, 0x6e, 0x62, 0x8d,
-	0x33, 0x88, 0xdf, 0xa7, 0x03, 0x92, 0xc2, 0x5a, 0x45, 0xb6, 0x2b, 0x12, 0xd5, 0xcd, 0x7a, 0x9d,
-	0xdd, 0xb1, 0x31, 0xe3, 0x98, 0x22, 0x91, 0xa8, 0x48, 0x68, 0x6d, 0x9c, 0x70, 0xca, 0xe8, 0x74,
-	0xc1, 0xe8, 0xb4, 0xdd, 0x79, 0x42, 0x65, 0x02, 0x13, 0x72, 0x62, 0x11, 0xb3, 0x39, 0xb4, 0x4e,
-	0x8b, 0xe6, 0xf8, 0x06, 0x5a, 0xf9, 0x93, 0xa1, 0x70, 0x22, 0xa8, 0x85, 0xb5, 0x83, 0x76, 0xff,
-	0x59, 0x77, 0x7d, 0x52, 0xf7, 0x74, 0xf0, 0x8d, 0xa4, 0x3b, 0x21, 0x27, 0xf8, 0x12, 0x8f, 0x87,
-	0xd0, 0x4c, 0x13, 0x92, 0x41, 0xdd, 0xf3, 0xc2, 0x8d, 0xbc, 0x62, 0xce, 0x59, 0x42, 0x92, 0x7b,
-	0x34, 0xfb, 0x5b, 0x83, 0xfb, 0xd5, 0x32, 0xbe, 0x5b, 0x93, 0xb0, 0xb7, 0xad, 0xd5, 0x49, 0x81,
-	0xad, 0x08, 0x79, 0x0b, 0xad, 0xc4, 0x9a, 0x4c, 0x0d, 0xc9, 0x16, 0x62, 0x9e, 0xdf, 0xbc, 0x04,
-	0xa7, 0x11, 0x59, 0xd2, 0x92, 0xf8, 0x92, 0x84, 0x87, 0xd0, 0x90, 0x76, 0x18, 0x34, 0x3c, 0x97,
-	0x6d, 0xe2, 0xbe, 0xe7, 0x1f, 0x3e, 0xea, 0x91, 0xb1, 0x13, 0x6f, 0x31, 0xcf, 0xe1, 0xec, 0x0b,
-	0x3c, 0xbe, 0x2e, 0x0a, 0x43, 0x68, 0x0f, 0x55, 0x9a, 0xc4, 0xe2, 0xfc, 0xb3, 0x98, 0x90, 0xdf,
-	0xe7, 0x1e, 0xaf, 0x96, 0x3c, 0x82, 0x52, 0x69, 0x55, 0x92, 0x77, 0xf2, 0x7a, 0x73, 0xc4, 0xaa,
-	0xc4, 0xe6, 0x2b, 0x83, 0x3e, 0xa9, 0xd4, 0xe1, 0xeb, 0x35, 0x83, 0x76, 0x37, 0x49, 0xcc, 0xb1,
-	0xd7, 0x2e, 0xd4, 0x87, 0x1d, 0xe5, 0x68, 0x92, 0x06, 0xf5, 0xb0, 0x71, 0x13, 0xad, 0x1c, 0xc5,
-	0x17, 0x50, 0x76, 0x04, 0x58, 0x96, 0x8e, 0xc9, 0x71, 0xfa, 0x31, 0xa5, 0xd4, 0x21, 0x42, 0x53,
-	0xaf, 0x16, 0xf2, 0x31, 0x06, 0x70, 0x57, 0x48, 0x69, 0xa6, 0xda, 0x15, 0x5b, 0x94, 0x29, 0xfb,
-	0x55, 0x83, 0x27, 0xd5, 0x15, 0xca, 0x2e, 0x15, 0x46, 0xed, 0x0a, 0x03, 0xf7, 0xe0, 0x41, 0x2c,
-	0x06, 0x14, 0x9f, 0x51, 0x4c, 0xd2, 0x19, 0x5b, 0x74, 0xbc, 0x5a, 0xc4, 0xa7, 0xb0, 0x13, 0xab,
-	0x89, 0x72, 0xfe, 0x52, 0x0d, 0xbe, 0x48, 0xb0, 0x03, 0x2d, 0x69, 0xb4, 0x53, 0x7a, 0x4a, 0x41,
-	0xd3, 0xd3, 0x96, 0x79, 0xff, 0x77, 0x1d, 0x1e, 0x2d, 0xdf, 0x36, 0xb2, 0x99, 0x92, 0x84, 0x33,
-	0x68, 0x7a, 0x5f, 0xf7, 0xb7, 0xd9, 0x51, 0x91, 0xdd, 0x09, 0x6f, 0x03, 0xb2, 0x83, 0x9f, 0xff,
-	0xfe, 0xff, 0xa9, 0x33, 0x0c, 0xa3, 0xac, 0x17, 0x15, 0x3b, 0xa5, 0xd1, 0xac, 0x88, 0x2e, 0xa2,
-	0xf2, 0x63, 0x4e, 0x71, 0x0e, 0x8d, 0x63, 0x72, 0xf8, 0x62, 0x5b, 0xcb, 0x95, 0xef, 0x9d, 0xad,
-	0x27, 0x63, 0x91, 0x1f, 0xfb, 0x12, 0xf7, 0x6f, 0x1b, 0x1b, 0xcd, 0xf2, 0x8b, 0x5d, 0x1c, 0x35,
-	0xbf, 0xd6, 0xb3, 0xde, 0xe0, 0x8e, 0xff, 0x0f, 0xbc, 0xba, 0x0c, 0x00, 0x00, 0xff, 0xff, 0x86,
-	0x3d, 0xeb, 0x06, 0x64, 0x04, 0x00, 0x00,
+	// 590 bytes of a gzipped FileDescriptorProto
+	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x00, 0x00, 0x00, 0x02, 0xff, 0xac, 0x54, 0xcd, 0x6e, 0xd3, 0x4c,
+	0x14, 0x95, 0xe3, 0xf4, 0xfb, 0xc2, 0x2d, 0x50, 0x34, 0x74, 0x61, 0xac, 0x0a, 0x59, 0x43, 0xd5,
+	0x86, 0x8d, 0x4d, 0x4b, 0x17, 0x88, 0x0d, 0xa8, 0x80, 0x2a, 0x24, 0x4a, 0x25, 0x17, 0x15, 0x89,
+	0xdd, 0x64, 0x72, 0x53, 0x06, 0x1c, 0x8f, 0x19, 0x4f, 0x8c, 0xa2, 0xa4, 0x2c, 0xd8, 0xb0, 0x61,
+	0xc7, 0x3b, 0xf0, 0x2a, 0x3c, 0x00, 0xaf, 0xc0, 0x83, 0x20, 0x4f, 0xec, 0xc4, 0xf9, 0xa9, 0xbb,
+	0x61, 0xe7, 0x7b, 0x73, 0xce, 0x3d, 0xe7, 0xfe, 0x64, 0xe0, 0xa6, 0xec, 0xf5, 0x50, 0x89, 0xf8,
+	0xdc, 0x4f, 0x94, 0xd4, 0x92, 0x90, 0x8f, 0x83, 0x0e, 0x72, 0xa6, 0x94, 0x40, 0xe5, 0xb3, 0x44,
+	0xf8, 0xd9, 0x9e, 0xbb, 0x75, 0x2e, 0xe5, 0x79, 0x84, 0x01, 0x4b, 0x44, 0xc0, 0xe2, 0x58, 0x6a,
+	0xa6, 0x85, 0x8c, 0xd3, 0x09, 0xc3, 0x5d, 0xd7, 0xc3, 0x04, 0xcb, 0x00, 0xfa, 0xa8, 0x59, 0xf9,
+	0x03, 0x66, 0x18, 0xeb, 0x49, 0x40, 0xc7, 0xd0, 0x3a, 0x29, 0x94, 0xc8, 0x63, 0x68, 0xe5, 0xb0,
+	0x2e, 0xd3, 0xcc, 0xb1, 0x3c, 0xab, 0xbd, 0xbe, 0x7f, 0xd7, 0x5f, 0x96, 0xf5, 0x4f, 0x3a, 0x1f,
+	0x90, 0xeb, 0x63, 0xd4, 0x2c, 0x9c, 0xe2, 0xc9, 0x01, 0x34, 0xd3, 0x04, 0xb9, 0xd3, 0x30, 0x3c,
+	0x6f, 0x25, 0xaf, 0xd0, 0x39, 0x4d, 0x90, 0x87, 0x06, 0x4d, 0x7f, 0x59, 0x70, 0xbd, 0x9a, 0x26,
+	0x4f, 0x97, 0x2c, 0x6c, 0xd7, 0x95, 0x3a, 0x2e, 0xb0, 0x15, 0x23, 0x4f, 0xa0, 0x95, 0x28, 0x99,
+	0x89, 0x2e, 0xaa, 0xc2, 0xcc, 0xbd, 0xcb, 0x9b, 0x08, 0xb1, 0x87, 0x0a, 0x63, 0x8e, 0xe1, 0x94,
+	0x44, 0x0e, 0xc0, 0xe6, 0xaa, 0xeb, 0xd8, 0x86, 0x4b, 0x57, 0x71, 0x9f, 0x85, 0xcf, 0x5f, 0xc6,
+	0x3d, 0xa9, 0xfa, 0x66, 0xde, 0x61, 0x0e, 0xa7, 0x67, 0x70, 0x6b, 0xd1, 0x14, 0xf1, 0x60, 0xbd,
+	0x2b, 0xd2, 0x24, 0x62, 0xc3, 0xd7, 0xac, 0x8f, 0xa6, 0x9f, 0x6b, 0x61, 0x35, 0x65, 0x10, 0x98,
+	0x72, 0x25, 0x92, 0xbc, 0x92, 0xf1, 0x9b, 0x23, 0x66, 0x29, 0x3a, 0x9e, 0x0d, 0xe8, 0x95, 0x48,
+	0x35, 0x79, 0xb4, 0x34, 0xa0, 0xad, 0x55, 0x16, 0x73, 0xec, 0xc2, 0x86, 0xf6, 0x61, 0x4d, 0x68,
+	0xec, 0xa7, 0x4e, 0xc3, 0xb3, 0x2f, 0xa3, 0x95, 0x52, 0xe1, 0x04, 0x4a, 0x0f, 0x81, 0x94, 0xa9,
+	0x23, 0xd4, 0x21, 0x7e, 0x1a, 0x60, 0xaa, 0x09, 0x81, 0x66, 0x3c, 0x6b, 0xc8, 0x7c, 0x13, 0x07,
+	0xfe, 0x67, 0x9c, 0xcb, 0x41, 0xac, 0x8b, 0x2e, 0xca, 0x90, 0x7e, 0xb3, 0xe0, 0x76, 0xb5, 0x85,
+	0xb2, 0x4a, 0x85, 0x61, 0xcd, 0x31, 0xc8, 0x36, 0xdc, 0x88, 0x58, 0x07, 0xa3, 0x53, 0x8c, 0x90,
+	0x6b, 0xa9, 0x8a, 0x8a, 0xf3, 0x49, 0xb2, 0x09, 0x6b, 0x91, 0xe8, 0x0b, 0x6d, 0x36, 0x65, 0x87,
+	0x93, 0x80, 0xb8, 0xd0, 0xe2, 0x32, 0xd6, 0x22, 0x1e, 0xa0, 0xd3, 0x34, 0xb4, 0x69, 0x4c, 0x7f,
+	0x5a, 0xb0, 0x59, 0x3a, 0x79, 0xcb, 0x34, 0x7f, 0xff, 0xaf, 0xac, 0xb4, 0x61, 0x43, 0x61, 0x2a,
+	0x07, 0x8a, 0xe3, 0x19, 0xaa, 0x34, 0x5f, 0xa5, 0x6d, 0x70, 0x8b, 0xe9, 0xbc, 0x9e, 0x4c, 0x50,
+	0x99, 0xc3, 0x79, 0x33, 0x4c, 0x4a, 0x8f, 0xf3, 0xc9, 0xfd, 0xef, 0x36, 0x6c, 0x4c, 0xff, 0x16,
+	0xa8, 0x32, 0xc1, 0x91, 0x8c, 0xa0, 0x69, 0x0e, 0x60, 0xb7, 0x6e, 0x6f, 0x95, 0xf9, 0xba, 0xde,
+	0x55, 0x40, 0xda, 0xfe, 0xfa, 0xfb, 0xcf, 0x8f, 0x06, 0x25, 0x5e, 0x90, 0xed, 0x05, 0x45, 0xc7,
+	0x69, 0x30, 0x2a, 0xbe, 0x2e, 0x82, 0xf2, 0x09, 0x4a, 0xc9, 0x18, 0xec, 0x23, 0xd4, 0x64, 0xa7,
+	0xae, 0xe4, 0xec, 0x40, 0xdc, 0xda, 0xdb, 0xa2, 0x81, 0x91, 0xbd, 0x4f, 0x76, 0xaf, 0x92, 0x0d,
+	0x46, 0xf9, 0x69, 0x5d, 0x90, 0x2f, 0xb0, 0x66, 0xd6, 0x45, 0xda, 0x75, 0x75, 0xab, 0x1b, 0x75,
+	0xef, 0xac, 0x42, 0xbe, 0xc8, 0xdf, 0x3d, 0xea, 0x1b, 0xf9, 0x36, 0xd9, 0xc9, 0xe5, 0x3f, 0xe7,
+	0xa4, 0x5a, 0x13, 0x0f, 0xac, 0xc3, 0xe6, 0xbb, 0x46, 0xb6, 0xd7, 0xf9, 0xcf, 0x3c, 0x98, 0x0f,
+	0xff, 0x06, 0x00, 0x00, 0xff, 0xff, 0x04, 0x7f, 0xd4, 0xa2, 0x9a, 0x05, 0x00, 0x00,
 }
 
 // Reference imports to suppress errors if they are not otherwise used.
@@ -410,6 +479,7 @@ const _ = grpc.SupportPackageIsVersion6
 type OfferingServiceClient interface {
 	List(ctx context.Context, in *OfferingListRequest, opts ...grpc.CallOption) (*OfferingList, error)
 	Get(ctx context.Context, in *OfferingGetRequest, opts ...grpc.CallOption) (*Offering, error)
+	Watch(ctx context.Context, in *OfferingWatchRequest, opts ...grpc.CallOption) (OfferingService_WatchClient, error)
 }
 
 type offeringServiceClient struct {
@@ -438,10 +508,43 @@ func (c *offeringServiceClient) Get(ctx context.Context, in *OfferingGetRequest,
 	return out, nil
 }
 
+func (c *offeringServiceClient) Watch(ctx context.Context, in *OfferingWatchRequest, opts ...grpc.CallOption) (OfferingService_WatchClient, error) {
+	stream, err := c.cc.NewStream(ctx, &_OfferingService_serviceDesc.Streams[0], "/kubecarrier.api.v1.OfferingService/Watch", opts...)
+	if err != nil {
+		return nil, err
+	}
+	x := &offeringServiceWatchClient{stream}
+	if err := x.ClientStream.SendMsg(in); err != nil {
+		return nil, err
+	}
+	if err := x.ClientStream.CloseSend(); err != nil {
+		return nil, err
+	}
+	return x, nil
+}
+
+type OfferingService_WatchClient interface {
+	Recv() (*Event, error)
+	grpc.ClientStream
+}
+
+type offeringServiceWatchClient struct {
+	grpc.ClientStream
+}
+
+func (x *offeringServiceWatchClient) Recv() (*Event, error) {
+	m := new(Event)
+	if err := x.ClientStream.RecvMsg(m); err != nil {
+		return nil, err
+	}
+	return m, nil
+}
+
 // OfferingServiceServer is the server API for OfferingService service.
 type OfferingServiceServer interface {
 	List(context.Context, *OfferingListRequest) (*OfferingList, error)
 	Get(context.Context, *OfferingGetRequest) (*Offering, error)
+	Watch(*OfferingWatchRequest, OfferingService_WatchServer) error
 }
 
 // UnimplementedOfferingServiceServer can be embedded to have forward compatible implementations.
@@ -453,6 +556,9 @@ func (*UnimplementedOfferingServiceServer) List(ctx context.Context, req *Offeri
 }
 func (*UnimplementedOfferingServiceServer) Get(ctx context.Context, req *OfferingGetRequest) (*Offering, error) {
 	return nil, status.Errorf(codes.Unimplemented, "method Get not implemented")
+}
+func (*UnimplementedOfferingServiceServer) Watch(req *OfferingWatchRequest, srv OfferingService_WatchServer) error {
+	return status.Errorf(codes.Unimplemented, "method Watch not implemented")
 }
 
 func RegisterOfferingServiceServer(s *grpc.Server, srv OfferingServiceServer) {
@@ -495,6 +601,27 @@ func _OfferingService_Get_Handler(srv interface{}, ctx context.Context, dec func
 	return interceptor(ctx, in, info, handler)
 }
 
+func _OfferingService_Watch_Handler(srv interface{}, stream grpc.ServerStream) error {
+	m := new(OfferingWatchRequest)
+	if err := stream.RecvMsg(m); err != nil {
+		return err
+	}
+	return srv.(OfferingServiceServer).Watch(m, &offeringServiceWatchServer{stream})
+}
+
+type OfferingService_WatchServer interface {
+	Send(*Event) error
+	grpc.ServerStream
+}
+
+type offeringServiceWatchServer struct {
+	grpc.ServerStream
+}
+
+func (x *offeringServiceWatchServer) Send(m *Event) error {
+	return x.ServerStream.SendMsg(m)
+}
+
 var _OfferingService_serviceDesc = grpc.ServiceDesc{
 	ServiceName: "kubecarrier.api.v1.OfferingService",
 	HandlerType: (*OfferingServiceServer)(nil),
@@ -508,6 +635,12 @@ var _OfferingService_serviceDesc = grpc.ServiceDesc{
 			Handler:    _OfferingService_Get_Handler,
 		},
 	},
-	Streams:  []grpc.StreamDesc{},
+	Streams: []grpc.StreamDesc{
+		{
+			StreamName:    "Watch",
+			Handler:       _OfferingService_Watch_Handler,
+			ServerStreams: true,
+		},
+	},
 	Metadata: "offering.proto",
 }
